--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                                     <a class="nav-link dropdown-toggle" href="#" id="moreEventDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                       More Event
                                     </a>
-                                    <ul class="dropdown-menu" aria-labelledby="moreEventDropdown">
-                                      <li><a class="dropdown-item" href="./Florida.html">Florida Event</a></li>
-                                      <li><a class="dropdown-item" href="./Virginia.html">Virginia Event</a></li>
-                                      <li><a class="dropdown-item" href="./Lasvegas.html">Las Vegas Event</a></li>
+                                    <ul class="dropdown-menu" aria-labelledby="moreEventDropdown" style="text-align: center;">
+                                      <li><a class="dropdown-item" href="./Florida.html">Florida</a></li>
+                                      <li><a class="dropdown-item" href="./Virginia.html">Virginia</a></li>
+                                      <li><a class="dropdown-item" href="./Lasvegas.html">Las Vegas</a></li>
                                     </ul>
                                   </li>
                                 </ul>
@@ -110,7 +110,7 @@
                     <div class="col-lg-10">
                         <div data-countdown="2023/06/13"></div>
                         <div class="navbar-btn d-none d-sm-inline-block" style="margin-left: 40%; padding-top: 50px;"> <!-- Added 'text-center' class -->
-                            <a class="main-btn" href="https://eventsandexhibitions.us/">Register now</a>
+                            <a class="main-btn" href="">Register now</a>
                         </div>
                     </div> <!-- header content -->
                 </div>
@@ -145,7 +145,7 @@
                 var email = emailInput.value;
                 
                 var xhr = new XMLHttpRequest();
-                xhr.open('POST', './submit_form.php'); // Replace with the URL of your PHP file
+                xhr.open('POST', ''); // Replace with the URL of your PHP file
                 xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
                 xhr.onload = function() {
                     if (xhr.status === 200) {
@@ -160,8 +160,6 @@
                 modal.style.display = 'none';
             });
         });
-
-
         </script>
         
   
@@ -177,21 +175,10 @@
                     <div class="modal-body">
                         <p class="modal-description">Stay tuned to our latest update and get a FREE access to our speakers' presentation</p>
                         <!-- Update the form element with the correct IDs -->
-                        <form id="emailForm" method="POST" action="send_email.php">
-                            <div class="form-group">
-                                <label for="name">Name:</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="lastName">Last Name:</label>
-                                <input type="text" class="form-control" id="lastName" name="last_name" placeholder="Your last name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="Your email address" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-                        </form>
+                        <form action="https://script.google.com/macros/s/AKfycbwMSUqpQu8YOoXCMWRqRiUtX2VM5vgmqurvxBWaXrfgWL-ICxFUQaFw486oR3aw9ZjS/exec" method="POST">
+                        <input type="email" name="email" placeholder="Enter your email" required>
+                        <input type="submit" value="Subscribe" class="subscribe-button" style="background-color: #800000; border: none; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; cursor: pointer; border-radius: 4px;">
+                    </form>
                     </div>
                 </div>
             </div>
