--- a/Florida.html
+++ b/Florida.html
@@ -109,13 +109,14 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div data-countdown="2023/06/27"></div>
-                        <div class="navbar-btn d-none d-sm-inline-block" style="margin-left: 40%; padding-top: 50px;"> <!-- Added 'text-center' class -->
+                        <div class="navbar-btn text-center" style="padding-top: 50px;">
                             <a class="main-btn" href="">Register now</a>
                         </div>
-                    </div> <!-- header content -->
+                    </div>
                 </div>
             </div>
-        </div> <!-- header content -->
+        </div>
+        <!-- header content -->
           
         <script>
             document.addEventListener('DOMContentLoaded', function() {
