--- a/Lasvegas.html
+++ b/Lasvegas.html
@@ -108,14 +108,15 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
-                        <div data-countdown="2023/07/15"></div>
-                        <div class="navbar-btn d-none d-sm-inline-block" style="margin-left: 40%; padding-top: 50px;"> <!-- Added 'text-center' class -->
+                        <div data-countdown="2023/09/26"></div>
+                        <div class="navbar-btn text-center" style="padding-top: 50px;">
                             <a class="main-btn" href="">Register now</a>
                         </div>
-                    </div> <!-- header content -->
+                    </div>
                 </div>
             </div>
-        </div> <!-- header content -->
+        </div>
+        <!-- header content -->
 
 
         <script>
@@ -204,7 +205,7 @@
                             <h2 class="title">About Our Event</h2>
                         </div> <!-- section title -->
 
-                        <h4>24- 25 January 2023</h4>
+                        <h4>26- 27 October 2023</h4>
 
                         <p class="text mt-30">For the 14th year, the school safety and security community come together for two days to reveal the latest campus security technologies and market trends, share best practices and address their biggest challenges in Las Vegas, Nevada this January.
 
@@ -424,11 +425,7 @@
                         <div class="col-lg-6">
                             <div class="footer-address mt-40">
                                 <h5 class="f-title">Venue Location</h5>
-                                <p class="text">24 - 25, January, 2023 <br>FLAMINGO LAS VEGAS HOTEL & CASINO
-                                    3555 Las Vegas Blvd South
-                                    Las Vegas, NV 89109FLAMINGO LAS VEGAS HOTEL & CASINO
-                                    3555 Las Vegas Blvd South
-                                    Las Vegas, NV 89109</p>
+                                <p class="text">26- 27 October 2023 <br></p>
                             </div> <!-- footer address -->
                         </div>
                         <div class="col-lg-6">
