--- a/Virginia.html
+++ b/Virginia.html
@@ -108,14 +108,15 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
-                        <div data-countdown=""></div>
-                        <div class="navbar-btn d-none d-sm-inline-block" style="margin-left: 40%; padding-top: 50px;"> <!-- Added 'text-center' class -->
+                        <div data-countdown="2023/09/05"></div>
+                        <div class="navbar-btn text-center" style="padding-top: 50px;">
                             <a class="main-btn" href="">Register now</a>
                         </div>
-                    </div> <!-- header content -->
+                    </div>
                 </div>
             </div>
-        </div> <!-- header content -->
+        </div> 
+        <!-- header content -->
 
 
         <script>
@@ -205,7 +206,7 @@
                             <h2 class="title">About Our Event</h2>
                         </div> <!-- section title -->
 
-                        <h4></h4>
+                        <h4>05- 06 October 2023</h4>
 
                         <p class="text mt-30"></p>
                     </div> <!-- about content -->
@@ -415,9 +416,7 @@
                         <div class="col-lg-6">
                             <div class="footer-address mt-40">
                                 <h5 class="f-title">Venue Location</h5>
-                                <p class="text">13 - 14 June, 2023 <br>Norris Conference Centers - San Antonio/Park North
-                                    618 NW Loop 410, Suite 207
-                                    San Antonio, TX 78216</p>
+                                <p class="text">05- 06 October 2023 <br></p>
                             </div> <!-- footer address -->
                         </div>
                         <div class="col-lg-6">
