--- a/index.html
+++ b/index.html
@@ -104,18 +104,21 @@
             </div> <!-- container -->
         </div>
 
+
         <div id="home" class="header-content-area bg_cover d-flex align-items-center" style="background-image: url(assets/images/header-bg.jpg)">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div data-countdown="2023/06/13"></div>
-                        <div class="navbar-btn d-none d-sm-inline-block" style="margin-left: 40%; padding-top: 50px;"> <!-- Added 'text-center' class -->
+                        <div class="navbar-btn text-center" style="padding-top: 50px;">
                             <a class="main-btn" href="">Register now</a>
                         </div>
-                    </div> <!-- header content -->
+                    </div>
                 </div>
             </div>
-        </div> <!-- header content -->
+        </div>
+        
+         <!-- header content -->
 
 
         
@@ -245,7 +248,7 @@
                             <i class="lni-bulb"></i>
                         </div>
                         <div class="counter-content">
-                            <span class="count counter">unlimited</span>
+                            <span class="count counter">Unlimited</span>
                             <p class="text">Seats Available</p>
                         </div>
                     </div> <!-- single counter -->
@@ -267,7 +270,7 @@
                             <i class="lni-coffee-cup"></i>
                         </div>
                         <div class="counter-content">
-                            <span class="count counter">unlimited</span>
+                            <span class="count counter">Unlimited</span>
                             <p class="text">Sessions</p>
                         </div>
                     </div>
