--- a/Florida.html
+++ b/Florida.html
@@ -396,6 +396,24 @@
         });
       </script>
 
+
+            <h2 class="title" style="text-align: center; margin-bottom: 100px;">Past Event</h2>
+        <div class="wrapper" style="margin-bottom: 100px;">
+            <img src="https://source.unsplash.com/random/600x600?water" alt="">
+            <img src="https://source.unsplash.com/random/600x600?summer" alt="">
+            <img src="https://source.unsplash.com/random/600x600?plants" alt="">
+            <img src="https://source.unsplash.com/random/600x600?snow" alt="">
+            <img src="https://source.unsplash.com/random/600x600?roses" alt="">
+            <img src="https://source.unsplash.com/random/600x600?sky" alt="">
+            <img src="https://source.unsplash.com/random/600x600?nature" alt="">
+            <img src="https://source.unsplash.com/random/600x600?blossom" alt="">
+            <img src="https://source.unsplash.com/random/600x600?ice" alt="">
+            <img src="https://source.unsplash.com/random/600x600?spring" alt="">
+        </div>
+
+
+
+
     
 
     <!--====== FOOTER PART START ======-->
