--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
             <div class="col-lg-8">
                 <div class="section-title text-center pb-50">
                     <h2 class="title">Speakers</h2>
+                    <p>TBH</p>
                 </div> <!-- section title -->
             </div>
         </div> <!-- row -->
