--- a/index.html
+++ b/index.html
@@ -347,50 +347,50 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="agenda-item">
-                    <p><strong>8:00 AM</strong> - Registration at Main Hall</p>
+                    <p><strong>8:00 AM - 8:15 AM</strong> - Registration at Main Hall</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>8:30 AM</strong> - Opening Session</p>
+                    <p><strong>8:15 AM - 8:30 AM</strong> - Opening Session</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>9:00 AM - 10:00 AM</strong> - Inspire and Prevent: Creative Strategies to Retain K-12 Students</p>
+                    <p><strong>8:30 AM - 9:30 AM</strong> - Inspire and Prevent: Creative Strategies to Retain K-12 Students</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>10:00 AM - 10:15 AM</strong> - Explore Further: Q&A and Open Dialogue</p>
+                    <p><strong>9:30 AM - 9:45 AM</strong> - Explore Further: Q&A and Open Dialogue</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>10:15 AM - 10:30 AM</strong> - Energize Your Connections: Transition Break and Networking</p>
+                    <p><strong>9:45 AM - 10:00 AM</strong> - Energize Your Connections: Transition Break and Networking</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>10:30 AM - 11:30 AM</strong> - Craft Informed Responses: Decoding Research-Based Options</p>
+                    <p><strong>10:00 AM - 10:45 AM</strong> - Craft Informed Responses: Decoding Research-Based Options</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>11:30 AM - 11:45 AM</strong> - Engage Deeper: Q&A Session for Insights</p>
+                    <p><strong>10:45 AM - 11:00 AM</strong> - Engage Deeper: Q&A Session for Insights</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>11:45 AM - 12:00 PM</strong> - Addressing Bullying in School</p>
+                    <p><strong>11:00 AM - 11:30 AM</strong> - Addressing Bullying in School</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>12:00 PM - 1:00 PM</strong> - Lunch Break: Network and Nourish</p>
+                    <p><strong>11:30 AM - 12:30 PM</strong> - Lunch Break: Network and Nourish</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>1:00 PM - 2:00 PM</strong> - FBI's Behavioral Lens: Crisis Analysis and School Threats</p>
+                    <p><strong>12:30 PM - 1:30 PM</strong> - FBI's Behavioral Lens: Crisis Analysis and School Threats</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>2:00 PM - 2:30 PM</strong> - Explore Further: Interactive Q&A Session</p>
+                    <p><strong>1:30 PM - 1:45 PM</strong> - Explore Further: Interactive Q&A Session</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>2:30 PM - 2:45 PM</strong> - Transition / Networking Break</p>
+                    <p><strong>1:45 PM - 2:00 PM</strong> - Transition / Networking Break</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>2:45 PM - 4:00 PM</strong> - FBI's Behavioral Insights Continued: Navigating Crisis in Schools</p>
+                    <p><strong>2:00 PM - 3:00 PM</strong> - FBI's Behavioral Insights Continued: Navigating Crisis in Schools</p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>4:00 PM - 4:30 PM</strong> - Collaborate and Conclude: Panel Discussion Finale
+                    <p><strong>3:00 PM - 4:00 PM</strong> - Collaborate and Conclude: Panel Discussion Finale
                     </p>
                   </div>
                   <div class="agenda-item">
-                    <p><strong>4:30 PM</strong> - Cheers to Innovation: End of session Filled with Learning and Connection</p>
+                    <p><strong>4:00 PM - 4:30 PM</strong> - Cheers to Innovation: End of session Filled with Learning and Connection</p>
                   </div>    
 
 
@@ -408,46 +408,46 @@
               <div class="row">
                 <div class="col-lg-12">
                     <div class="agenda-item">
-                        <p><strong>8:00 AM</strong> - Light Breakfast Open at Main Hall</p>
+                        <p><strong>8:00 AM - 8:15 AM</strong> - Light Breakfast Open at Main Hall</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>8:30 AM</strong> - Opening Session</p>
+                        <p><strong>8:15 AM - 8:45 AM</strong> - Opening Session</p>
                       </div>
                       <div class="agenda-item">
                         <p><strong>9:00 AM - 10:00 AM</strong> - Embracing Change: Adapting Responses for Safer Schools</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>10:00 AM - 10:15 AM</strong> - Building Resilience: Recovery Strategies for School Communities</p>
+                        <p><strong>10:00 AM - 10:45 AM</strong> - Building Resilience: Recovery Strategies for School Communities</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>10:15 AM - 10:30 AM</strong> - Breakthrough Insights: Q&A on Effective Prevention Measures</p>
+                        <p><strong>10:45 AM - 11:30 AM</strong> - Breakthrough Insights: Q&A on Effective Prevention Measures</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>10:30 AM - 11:30 AM</strong> - Prepared for Tomorrow: Future-Ready Emergency Response Plans</p>
+                        <p><strong>11:30 AM - 12:30 PM</strong> - Prepared for Tomorrow: Future-Ready Emergency Response Plans</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>11:30 AM - 11:45 AM</strong> - Internet Safety and Todays Generation Trends</p>
+                        <p><strong>12:30 PM - 1:15 PM</strong> - Internet Safety and Todays Generation Trends</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>11:45 AM - 12:00 PM</strong> - Dialogue Deepening: Engaging Q&A for Practical Insights</p>
+                        <p><strong>1:15 PM - 2:00 PM</strong> - Dialogue Deepening: Engaging Q&A for Practical Insights</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>12:00PM - 1:30PM</strong> - Lunch Break: Nourish and Network with Purpose</p>
+                        <p><strong>2:00 PM - 2:30 PM</strong> - Lunch Break: Nourish and Network with Purpose</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>01:30PM - 02:30PM</strong> - Bomb Threats</p>
+                        <p><strong>2:30 PM - 3:30 PM</strong> - Bomb Threats</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>02:30PM - 3:00PM</strong> - Dive Deeper: Interactive Q&A Session for Knowledge Amplification</p>
+                        <p><strong>3:30 PM - 4:15 PM</strong> - Dive Deeper: Interactive Q&A Session for Knowledge Amplification</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>3:00PM - 4:00PM</strong> - Energize Break: Refresh and Prepare for the Afternoon</p>
+                        <p><strong>4:15 PM - 4:30 PM</strong> - Energize Break: Refresh and Prepare for the Afternoon</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>4:00PM - 4:30PM</strong> - Collaborative Closure: Roundtable Discussion on Collective Progress</p>
+                        <p><strong>4:30 PM - 4:45 PM</strong> - Collaborative Closure: Roundtable Discussion on Collective Progress</p>
                       </div>
                       <div class="agenda-item">
-                        <p><strong>4:30 PM</strong> - End of Session: Synergize and Conclude: Roundtable Discussion and Closing Insights
+                        <p><strong>4:45 PM</strong> - End of Session: Synergize and Conclude: Roundtable Discussion and Closing Insights
                         </p>
                       </div>
                 </div>
