added sponsor page

--- a/index.html
+++ b/index.html
@@ -623,14 +623,14 @@
                     <div class="section-title text-center pb-50">
                         <h2 class="title">Sponsorship & Exhibiting Opportunities</h2>
                         <p class="text">National School Safety and Response Conference is a great way for you to reach your audience.</p>
-                        <a href="#" class="btn btn-primary custom-button" id="sponsorBtn">Become a Sponsor</a> <!-- Add your desired link or email address for sponsor inquiries -->
+                        <a href="sponsor.html" class="btn btn-primary custom-button" id="sponsorBtn">Become a Sponsor</a> <!-- Add your desired link or email address for sponsor inquiries -->
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
     </div>
 
     <script>
-        document.getElementById('sponsorBtn').addEventListener('click', function() {
+        document.getElementById('#').addEventListener('click', function() {
           // Show the modal
           document.getElementById('myModal').style.display = 'block';
         });
