1st commit in sponsor page

--- a/sponsor.html
+++ b/sponsor.html
@@ -68,7 +68,19 @@
 
     .nav-tabs .nav-item {
         white-space: nowrap;
-    }   
+    }
+    @media (max-width: 767px) {
+    #day1-tab, #day2-tab {
+        font-size: 14px;
+        overflow-x: hidden;
+    }
+    .nav-tabs {
+        margin-left: -5%;
+        overflow-x: hidden;
+    }
+
+}
+
       </style>
 
 </head>
