3rd commit in sponsor page

--- a/sponsor.html
+++ b/sponsor.html
@@ -169,10 +169,10 @@
                         <a class="nav-link" id="day2-tab" data-toggle="tab" href="#day2" role="tab" aria-controls="day2" aria-selected="false">MERCHANDISE SPONSOR</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="day2-tab" data-toggle="tab" href="#day2" role="tab" aria-controls="day2" aria-selected="false">PARTICIPATING SPONSOR</a>
+                        <a class="nav-link" id="day2-tab" data-toggle="tab" href="#day3" role="tab" aria-controls="day2" aria-selected="false">PARTICIPATING SPONSOR</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="day2-tab" data-toggle="tab" href="#day2" role="tab" aria-controls="day2" aria-selected="false">OTHER SPONSORSHIP OPPORTUNITIES</a>
+                        <a class="nav-link" id="day2-tab" data-toggle="tab" href="#day4" role="tab" aria-controls="day2" aria-selected="false">OTHER SPONSORSHIP OPPORTUNITIES</a>
                     </li>
                 </ul>
             </div>
@@ -362,6 +362,125 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Call to Action -->
+                <div class="row mx-auto">
+                    <div class="col-lg-12 text-center">
+                        <a href="#" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Tab Content -->
+
+
+<!-- Day 3 Tab -->
+<div class="tab-pane fade" id="day3" role="tabpanel" aria-labelledby="day2-tab">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="agenda-item" style="margin-top: 50px;">
+
+                <!-- Image and Text Row 1 -->
+                <div class="row mb-4 mx-auto">
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level">
+                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level" style="margin-top: 30%;">
+                            <h3>CONFERENCE BREAKFAST - $2,500</h3>
+                            <p>- Welcome the conference delegate during sponsored breakfast</p>
+                            <p>- Company sign supplied by you, displayed during your sponsored breakfast</p>
+                            <p>- 2 complimentary lunch invitations for company representatives to your sponsored breakfast</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Image and Text Row 2 -->
+                <div class="row mb-4 mx-auto">
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level">
+                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level" style="margin-top: 30%;">
+                            <h3>CONFERENCE LUNCH - $3,500</h3>
+                            <p>- Welcome the conference delegates during sponsored lunch</p>
+                            <p>- Company sign supplied by you, displayed during your sponsored lunch</p>
+                            <p>- 2 complimentary lunch invitations for company representatives to your sponsored lunch</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Image and Text Row 3 -->
+                <div class="row mb-4 mx-auto">
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level">
+                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level" style="margin-top: 30%;">
+                            <h3>
+                                REFRESHMENT BREAKS - $1,500</h3>
+                            <p>- Corporate logo featured in the registration brochure</p>
+                            <p>- Introduction to conference delegates during welcome reception</p>
+                            <p>- Company sign supplied by you, displayed during the welcome reception</p>
+                            <p>- Corporate logo and promotional paragraph in the conference program</p>
+                            <p>- 2 Complimentary tickets to the welcome reception</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Call to Action -->
+                <div class="row mx-auto">
+                    <div class="col-lg-12 text-center">
+                        <a href="#" class="btn btn-primary">Yes, I want to become a Participating Sponsor</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Tab Content -->
+
+<!-- Day 4 Tab -->
+<div class="tab-pane fade" id="day4" role="tabpanel" aria-labelledby="day2-tab">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="agenda-item" style="margin-top: 50px;">
+
+                <!-- Image and Text Row 1 -->
+                <div class="row mb-4 mx-auto">
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level">
+                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <div class="sponsorship-level" style="margin-top: 30%;">
+                            <h3>
+                                WIRELESS INTERNET - $1,500</h3>
+                            <p>- Wireless Internet will be featured available in the area + Plenary Session Hall, 2 complimentary tickets to the welcome reception.</p>
+                            <p>- Corporate logo in the registration brochure and company description on the website.</p>
+                            <p>- Company sign supplied by you, displayed in the exhibition area.</p>
+                            <p>- Company logo on user\'s log-in screen.</p>
+                        </div>
+                    </div>
+                </div>
+
 
                 <!-- Call to Action -->
                 <div class="row mx-auto">
