new commit (feb2024)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col-lg-10">
                         <div data-countdown="2024/11/13"></div>
                         <div class="navbar-btn text-center" style="padding-top: 50px;">
-                            <a class="main-btn" href="">Register Now! Online</a>
+                            <a class="main-btn" href="https://eveex.wufoo.com/forms/z1t59jxk05uknxz/">Register Now! Online</a>
                              <button onclick="downloadPDF()" class="main-btn" style="margin-left: 20px;">Offline Registration Form</button>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
             </div>
         </div>
 
-        <a id="pdfLink" style="display: none;" href="Delegate Registration Form.pdf" download="Delegate-Registration-Form.pdf"></a>
+        <a id="pdfLink" style="display: none;" href="Delegates Registration Form.pdf" download="Delegate-Registration-Form.pdf"></a>
         
          <!-- header content -->
 
