--- a/sponsor.html
+++ b/sponsor.html
@@ -412,10 +412,10 @@
 
                     <div class="col-lg-6">
                         <div class="sponsorship-level" style="margin-top: 30%;">
-                            <h3>CONFERENCE LUNCH - $3,500</h3>
-                            <p>- Welcome the conference delegates during sponsored lunch</p>
-                            <p>- Company sign supplied by you, displayed during your sponsored lunch</p>
-                            <p>- 2 complimentary lunch invitations for company representatives to your sponsored lunch</p>
+                            <h3>CONFERENCE SNACK - $100</h3>
+                            <p>- Welcome the conference delegates during sponsored snack</p>
+                            <p>- Company sign supplied by you, displayed during your sponsored snack</p>
+                            <p>- 2 complimentary snack invitations for company representatives to your sponsored snack</p>
                         </div>
                     </div>
                 </div>
