second commit (feb2024)

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         
         <script>
             document.addEventListener('DOMContentLoaded', function() {
-                var getTicketButton = document.querySelector('.main-btn');
+                var getTicketButton = document.querySelector('.main-btns');
                 var modal = document.getElementById('myModal');
                 var span = document.getElementsByClassName('close')[0];
                 var emailForm = document.getElementById('emailForm');
