adding sponsor images

--- a/sponsor.html
+++ b/sponsor.html
@@ -190,7 +190,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                            <img src="/assets/images/platinum.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -208,7 +208,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/gold.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -226,7 +226,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Silver Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/silver.png" alt="Silver Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -244,7 +244,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/bronze.png" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -262,7 +262,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/exhibitor.png" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -286,7 +286,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/media.jpg" alt="Bronze Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -308,7 +308,7 @@
                 <!-- Call to Action -->
                 <div class="row mx-auto">
                     <div class="col-lg-12 text-center">
-                        <a href="#" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
+                        <a href="https://eveex.wufoo.com/forms/p16to90k0vdctji/" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
                     </div>
                 </div>
 
@@ -330,7 +330,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                            <img src="/assets/images/lineyard.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -349,7 +349,7 @@
 
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/lineyard.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -366,7 +366,7 @@
                 <!-- Call to Action -->
                 <div class="row mx-auto">
                     <div class="col-lg-12 text-center">
-                        <a href="#" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
+                        <a href="https://eveex.wufoo.com/forms/p16to90k0vdctji/" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
                     </div>
                 </div>
 
@@ -387,7 +387,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                            <img src="/assets/images/snack.jpg" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -406,7 +406,7 @@
 
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/snacks.jpg" alt="Gold Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -425,7 +425,7 @@
 
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="assets/images/about.png" alt="Gold Sponsor Logo" class="img-fluid mb-3">
+                            <img src="assets/images/refreshment.jpg" alt="Gold Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -445,7 +445,7 @@
                 <!-- Call to Action -->
                 <div class="row mx-auto">
                     <div class="col-lg-12 text-center">
-                        <a href="#" class="btn btn-primary">Yes, I want to become a Participating Sponsor</a>
+                        <a href="https://eveex.wufoo.com/forms/p16to90k0vdctji/" class="btn btn-primary">Yes, I want to become a Participating Sponsor</a>
                     </div>
                 </div>
 
@@ -465,7 +465,7 @@
                 <div class="row mb-4 mx-auto">
                     <div class="col-lg-6">
                         <div class="sponsorship-level">
-                            <img src="/assets/images/about.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
+                            <img src="/assets/images/wifi.png" alt="Platinum Sponsor Logo" class="img-fluid mb-3">
                         </div>
                     </div>
 
@@ -485,7 +485,7 @@
                 <!-- Call to Action -->
                 <div class="row mx-auto">
                     <div class="col-lg-12 text-center">
-                        <a href="#" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
+                        <a href="https://eveex.wufoo.com/forms/p16to90k0vdctji/" class="btn btn-primary">Yes, I want to become a Major Sponsor</a>
                     </div>
                 </div>
 
